# backend/docs/swagger.json
@@ -357,7 +357,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ent.Positionassingment"
+                            "$ref": "#/definitions/controllers.Positionassingment"
                         }
                     },
                     "400": {
@@ -605,13 +605,13 @@
                 "dayStart": {
                     "type": "string"
                 },
-                "formdata": {
+                "departmentid": {
                     "type": "integer"
                 },
-                "formdepartment": {
+                "physicianid": {
                     "type": "integer"
                 },
-                "formposition": {
+                "positionid": {
                     "type": "integer"
                 }
             }
@@ -637,8 +637,8 @@
         "ent.DepartmentEdges": {
             "type": "object",
             "properties": {
-                "department": {
-                    "description": "Department holds the value of the department edge.",
+                "formdepartment": {
+                    "description": "Formdepartment holds the value of the formdepartment edge.",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/ent.Positionassingment"
@@ -671,8 +671,8 @@
         "ent.PhysicianEdges": {
             "type": "object",
             "properties": {
-                "user": {
-                    "description": "User holds the value of the user edge.",
+                "formuser": {
+                    "description": "Formuser holds the value of the formuser edge.",
                     "type": "object",
                     "$ref": "#/definitions/ent.Positionassingment"
                 }
@@ -699,8 +699,8 @@
         "ent.PositionEdges": {
             "type": "object",
             "properties": {
-                "position": {
-                    "description": "Position holds the value of the position edge.",
+                "formposition": {
+                    "description": "Formposition holds the value of the formposition edge.",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/ent.Positionassingment"
@@ -729,20 +729,20 @@
         "ent.PositionassingmentEdges": {
             "type": "object",
             "properties": {
-                "formdata": {
-                    "description": "Formdata holds the value of the formdata edge.",
-                    "type": "object",
-                    "$ref": "#/definitions/ent.Physician"
-                },
-                "formdepartment": {
-                    "description": "Formdepartment holds the value of the formdepartment edge.",
+                "department": {
+                    "description": "Department holds the value of the department edge.",
                     "type": "object",
                     "$ref": "#/definitions/ent.Department"
                 },
-                "formposition": {
-                    "description": "Formposition holds the value of the formposition edge.",
+                "position": {
+                    "description": "Position holds the value of the position edge.",
                     "type": "object",
                     "$ref": "#/definitions/ent.Position"
+                },
+                "user": {
+                    "description": "User holds the value of the user edge.",
+                    "type": "object",
+                    "$ref": "#/definitions/ent.Physician"
                 }
             }
         },
